Added image and few more elements

--- a/test.html
+++ b/test.html
@@ -1,3 +1,17 @@
+<!DOCTYPE html>
+<htmL>
+<head>
+	<title> Swifty Page </title>
+</head>
+<body>
+
 <h1> Hey. I'm a big SWIFTIE! </h>
-<p> I just want  everyone to know that I'm learning how to code to make TS a website lol </p>
+<p> I just want  everyone to know that I'm learning how to code to make TS a <i>website</i> lol  </p>
 <a href="https://instagram.com/creative.lilili" target="_blank" title="Let's go instagram"> Here's the link of my fanart of Taylor Swift hekhek</a>
+<p> Taylor swift song: <br>
+"Betty" from Folkore album</p>
+
+<img src="img/TS fan art.png">
+
+</body>
+</html>
