added font styles for h1

--- a/style-test.html
+++ b/style-test.html
@@ -3,9 +3,11 @@
 <head>
 	<title>HMTL Dress up</title>
 
-	<style type="txt/css">
-		h1 {
-		font-size: 30px; color: salmon; }
+	<style type="text/css">
+		h1 { font-size: 30px;
+			font-style: "Century Gothic"; 
+		color: salmon; }
+	</style>
 
 	</style>
 
