nagbutang kog css link

--- a/style-test.html
+++ b/style-test.html
@@ -3,23 +3,18 @@
 <head>
 	<title>HMTL Dress up</title>
 
-	<style type="text/css">
-		h1 { font-size: 30px;
-			font-style: "Century Gothic"; 
-		color: salmon; }
-	</style>
+	<link rel="stylesheet" type="text/css" href="css/text.css">
 
-	</style>
 
 </head>
 <body>
 
-	<h1> heading 1-1 </h1>
+	<h1 class="big"> heading 1-1 </h1>
 	<h1> heading 1-2 </h1>
-	<h1> heading 1-3 </h1>
+	<h1 class="big"> heading 1-3 </h1>
 
 	<h2> heading 2-1 </h2>
-	<h2> heading 2-2 </h2>
+	<h2 class="big uppercase"> heading 2-2 </h2>
 	<h2> heading 2-3 </h2>
 
 
